ParGram.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.5 from ParGram.y
-----------------------------------------------------------------------------

state 100 contains 1 reduce/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pFunction -> Function                       (1)
	%start_pDecl -> Decl                               (2)
	%start_pPDecl -> PDecl                             (3)
	%start_pListFunction -> ListFunction               (4)
	%start_pListStm -> ListStm                         (5)
	%start_pListDecl -> ListDecl                       (6)
	%start_pListPDecl -> ListPDecl                     (7)
	%start_pListIdent -> ListIdent                     (8)
	%start_pStm -> Stm                                 (9)
	%start_pExp -> Exp                                 (10)
	%start_pExp1 -> Exp1                               (11)
	%start_pExp2 -> Exp2                               (12)
	%start_pExp3 -> Exp3                               (13)
	%start_pExp4 -> Exp4                               (14)
	%start_pExp5 -> Exp5                               (15)
	%start_pExp6 -> Exp6                               (16)
	%start_pExp7 -> Exp7                               (17)
	%start_pListExp -> ListExp                         (18)
	%start_pType -> Type                               (19)
	%start_pPMet -> PMet                               (20)
	Ident -> L_ident                                   (21)
	String -> L_quoted                                 (22)
	Integer -> L_integ                                 (23)
	Double -> L_doubl                                  (24)
	Program -> ListStm                                 (25)
	Function -> Ident '(' ListPDecl ')' ':' Type 'do' ListStm 'end'   (26)
	Decl -> Ident ':' Type                             (27)
	PDecl -> PMet ':' Type                             (28)
	ListFunction ->                                    (29)
	ListFunction -> ListFunction Function              (30)
	ListStm ->                                         (31)
	ListStm -> ListStm Stm                             (32)
	ListDecl ->                                        (33)
	ListDecl -> Decl                                   (34)
	ListDecl -> Decl ';' ListDecl                      (35)
	ListPDecl ->                                       (36)
	ListPDecl -> PDecl                                 (37)
	ListPDecl -> PDecl ';' ListPDecl                   (38)
	ListIdent -> Ident                                 (39)
	ListIdent -> Ident ',' ListIdent                   (40)
	Stm -> Decl ';'                                    (41)
	Stm -> Exp ';'                                     (42)
	Stm -> 'do' ListStm 'end'                          (43)
	Stm -> 'from' Exp 'until' Exp 'loop' Stm 'end'     (44)
	Stm -> 'return' Exp ';'                            (45)
	Stm -> Function                                    (46)
	Exp -> Exp5 ':=' Exp                               (47)
	Exp -> Exp1                                        (48)
	Exp1 -> Exp2 '<' Exp2                              (49)
	Exp1 -> Exp2                                       (50)
	Exp2 -> Exp2 '+' Exp3                              (51)
	Exp2 -> Exp2 '-' Exp3                              (52)
	Exp2 -> Exp3                                       (53)
	Exp3 -> Exp3 '*' Exp4                              (54)
	Exp3 -> Exp4                                       (55)
	Exp4 -> Ident '(' ListExp ')'                      (56)
	Exp4 -> Exp5                                       (57)
	Exp5 -> '?' Exp4                                   (58)
	Exp5 -> Exp6                                       (59)
	Exp6 -> Exp6 '[' Exp ']'                           (60)
	Exp6 -> Exp7                                       (61)
	Exp7 -> Ident                                      (62)
	Exp7 -> String                                     (63)
	Exp7 -> Integer                                    (64)
	Exp7 -> Double                                     (65)
	Exp7 -> '(' Exp ')'                                (66)
	ListExp ->                                         (67)
	ListExp -> Exp                                     (68)
	ListExp -> Exp ',' ListExp                         (69)
	Type -> 'int'                                      (70)
	Type -> 'double'                                   (71)
	Type -> 'bool'                                     (72)
	Type -> 'array' '[' Type ']'                       (73)
	Type -> '&' Type                                   (74)
	PMet -> 'value' Ident                              (75)
	PMet -> 'valres' Ident                             (76)
	PMet -> 'name' Ident                               (77)
	PMet -> 'ref' Ident                                (78)
	PMet -> Ident                                      (79)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'&'            { PT _ (TS _ 1) }
	'('            { PT _ (TS _ 2) }
	')'            { PT _ (TS _ 3) }
	'*'            { PT _ (TS _ 4) }
	'+'            { PT _ (TS _ 5) }
	','            { PT _ (TS _ 6) }
	'-'            { PT _ (TS _ 7) }
	':'            { PT _ (TS _ 8) }
	':='           { PT _ (TS _ 9) }
	';'            { PT _ (TS _ 10) }
	'<'            { PT _ (TS _ 11) }
	'?'            { PT _ (TS _ 12) }
	'['            { PT _ (TS _ 13) }
	']'            { PT _ (TS _ 14) }
	'array'        { PT _ (TS _ 15) }
	'bool'         { PT _ (TS _ 16) }
	'do'           { PT _ (TS _ 17) }
	'double'       { PT _ (TS _ 18) }
	'end'          { PT _ (TS _ 19) }
	'from'         { PT _ (TS _ 20) }
	'int'          { PT _ (TS _ 21) }
	'loop'         { PT _ (TS _ 22) }
	'name'         { PT _ (TS _ 23) }
	'ref'          { PT _ (TS _ 24) }
	'return'       { PT _ (TS _ 25) }
	'until'        { PT _ (TS _ 26) }
	'valres'       { PT _ (TS _ 27) }
	'value'        { PT _ (TS _ 28) }
	L_ident        { PT _ (TV $$) }
	L_quoted       { PT _ (TL $$) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pFunction rule  1
	%start_pDecl    rule  2
	%start_pPDecl   rule  3
	%start_pListFunction rule  4
	%start_pListStm rule  5
	%start_pListDecl rule  6
	%start_pListPDecl rule  7
	%start_pListIdent rule  8
	%start_pStm     rule  9
	%start_pExp     rule  10
	%start_pExp1    rule  11
	%start_pExp2    rule  12
	%start_pExp3    rule  13
	%start_pExp4    rule  14
	%start_pExp5    rule  15
	%start_pExp6    rule  16
	%start_pExp7    rule  17
	%start_pListExp rule  18
	%start_pType    rule  19
	%start_pPMet    rule  20
	Ident           rule  21
	String          rule  22
	Integer         rule  23
	Double          rule  24
	Program         rule  25
	Function        rule  26
	Decl            rule  27
	PDecl           rule  28
	ListFunction    rules 29, 30
	ListStm         rules 31, 32
	ListDecl        rules 33, 34, 35
	ListPDecl       rules 36, 37, 38
	ListIdent       rules 39, 40
	Stm             rules 41, 42, 43, 44, 45, 46
	Exp             rules 47, 48
	Exp1            rules 49, 50
	Exp2            rules 51, 52, 53
	Exp3            rules 54, 55
	Exp4            rules 56, 57
	Exp5            rules 58, 59
	Exp6            rules 60, 61
	Exp7            rules 62, 63, 64, 65, 66
	ListExp         rules 67, 68, 69
	Type            rules 70, 71, 72, 73, 74
	PMet            rules 75, 76, 77, 78, 79

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'('            reduce using rule 31
	'?'            reduce using rule 31
	'do'           reduce using rule 31
	'from'         reduce using rule 31
	'return'       reduce using rule 31
	L_ident        reduce using rule 31
	L_quoted       reduce using rule 31
	L_integ        reduce using rule 31
	L_doubl        reduce using rule 31
	%eof           reduce using rule 31

	Program        goto state 85
	ListStm        goto state 86

State 1


	L_ident        shift, and enter state 22

	Ident          goto state 83
	Function       goto state 84

State 2


	L_ident        shift, and enter state 22

	Ident          goto state 76
	Decl           goto state 82

State 3


	'name'         shift, and enter state 25
	'ref'          shift, and enter state 26
	'valres'       shift, and enter state 27
	'value'        shift, and enter state 28
	L_ident        shift, and enter state 22

	Ident          goto state 23
	PDecl          goto state 81
	PMet           goto state 75

State 4


	L_ident        reduce using rule 29
	%eof           reduce using rule 29

	ListFunction   goto state 80

State 5


	'('            reduce using rule 31
	'?'            reduce using rule 31
	'do'           reduce using rule 31
	'from'         reduce using rule 31
	'return'       reduce using rule 31
	L_ident        reduce using rule 31
	L_quoted       reduce using rule 31
	L_integ        reduce using rule 31
	L_doubl        reduce using rule 31
	%eof           reduce using rule 31

	ListStm        goto state 79

State 6


	L_ident        shift, and enter state 22
	%eof           reduce using rule 33

	Ident          goto state 76
	Decl           goto state 77
	ListDecl       goto state 78

State 7


	'name'         shift, and enter state 25
	'ref'          shift, and enter state 26
	'valres'       shift, and enter state 27
	'value'        shift, and enter state 28
	L_ident        shift, and enter state 22
	%eof           reduce using rule 36

	Ident          goto state 23
	PDecl          goto state 73
	ListPDecl      goto state 74
	PMet           goto state 75

State 8


	L_ident        shift, and enter state 22

	Ident          goto state 71
	ListIdent      goto state 72

State 9


	'('            shift, and enter state 48
	'?'            shift, and enter state 49
	'do'           shift, and enter state 68
	'from'         shift, and enter state 69
	'return'       shift, and enter state 70
	L_ident        shift, and enter state 22
	L_quoted       shift, and enter state 50
	L_integ        shift, and enter state 51
	L_doubl        shift, and enter state 52

	Ident          goto state 63
	String         goto state 36
	Integer        goto state 37
	Double         goto state 38
	Function       goto state 64
	Decl           goto state 65
	Stm            goto state 66
	Exp            goto state 67
	Exp1           goto state 40
	Exp2           goto state 41
	Exp3           goto state 42
	Exp4           goto state 43
	Exp5           goto state 44
	Exp6           goto state 45
	Exp7           goto state 46

State 10


	'('            shift, and enter state 48
	'?'            shift, and enter state 49
	L_ident        shift, and enter state 22
	L_quoted       shift, and enter state 50
	L_integ        shift, and enter state 51
	L_doubl        shift, and enter state 52

	Ident          goto state 35
	String         goto state 36
	Integer        goto state 37
	Double         goto state 38
	Exp            goto state 62
	Exp1           goto state 40
	Exp2           goto state 41
	Exp3           goto state 42
	Exp4           goto state 43
	Exp5           goto state 44
	Exp6           goto state 45
	Exp7           goto state 46

State 11


	'('            shift, and enter state 48
	'?'            shift, and enter state 49
	L_ident        shift, and enter state 22
	L_quoted       shift, and enter state 50
	L_integ        shift, and enter state 51
	L_doubl        shift, and enter state 52

	Ident          goto state 35
	String         goto state 36
	Integer        goto state 37
	Double         goto state 38
	Exp1           goto state 61
	Exp2           goto state 41
	Exp3           goto state 42
	Exp4           goto state 43
	Exp5           goto state 58
	Exp6           goto state 45
	Exp7           goto state 46

State 12


	'('            shift, and enter state 48
	'?'            shift, and enter state 49
	L_ident        shift, and enter state 22
	L_quoted       shift, and enter state 50
	L_integ        shift, and enter state 51
	L_doubl        shift, and enter state 52

	Ident          goto state 35
	String         goto state 36
	Integer        goto state 37
	Double         goto state 38
	Exp2           goto state 60
	Exp3           goto state 42
	Exp4           goto state 43
	Exp5           goto state 58
	Exp6           goto state 45
	Exp7           goto state 46

State 13


	'('            shift, and enter state 48
	'?'            shift, and enter state 49
	L_ident        shift, and enter state 22
	L_quoted       shift, and enter state 50
	L_integ        shift, and enter state 51
	L_doubl        shift, and enter state 52

	Ident          goto state 35
	String         goto state 36
	Integer        goto state 37
	Double         goto state 38
	Exp3           goto state 59
	Exp4           goto state 43
	Exp5           goto state 58
	Exp6           goto state 45
	Exp7           goto state 46

State 14


	'('            shift, and enter state 48
	'?'            shift, and enter state 49
	L_ident        shift, and enter state 22
	L_quoted       shift, and enter state 50
	L_integ        shift, and enter state 51
	L_doubl        shift, and enter state 52

	Ident          goto state 35
	String         goto state 36
	Integer        goto state 37
	Double         goto state 38
	Exp4           goto state 57
	Exp5           goto state 58
	Exp6           goto state 45
	Exp7           goto state 46

State 15


	'('            shift, and enter state 48
	'?'            shift, and enter state 49
	L_ident        shift, and enter state 22
	L_quoted       shift, and enter state 50
	L_integ        shift, and enter state 51
	L_doubl        shift, and enter state 52

	Ident          goto state 53
	String         goto state 36
	Integer        goto state 37
	Double         goto state 38
	Exp5           goto state 56
	Exp6           goto state 45
	Exp7           goto state 46

State 16


	'('            shift, and enter state 48
	L_ident        shift, and enter state 22
	L_quoted       shift, and enter state 50
	L_integ        shift, and enter state 51
	L_doubl        shift, and enter state 52

	Ident          goto state 53
	String         goto state 36
	Integer        goto state 37
	Double         goto state 38
	Exp6           goto state 55
	Exp7           goto state 46

State 17


	'('            shift, and enter state 48
	L_ident        shift, and enter state 22
	L_quoted       shift, and enter state 50
	L_integ        shift, and enter state 51
	L_doubl        shift, and enter state 52

	Ident          goto state 53
	String         goto state 36
	Integer        goto state 37
	Double         goto state 38
	Exp7           goto state 54

State 18


	'('            shift, and enter state 48
	'?'            shift, and enter state 49
	L_ident        shift, and enter state 22
	L_quoted       shift, and enter state 50
	L_integ        shift, and enter state 51
	L_doubl        shift, and enter state 52
	%eof           reduce using rule 67

	Ident          goto state 35
	String         goto state 36
	Integer        goto state 37
	Double         goto state 38
	Exp            goto state 39
	Exp1           goto state 40
	Exp2           goto state 41
	Exp3           goto state 42
	Exp4           goto state 43
	Exp5           goto state 44
	Exp6           goto state 45
	Exp7           goto state 46
	ListExp        goto state 47

State 19


	'&'            shift, and enter state 30
	'array'        shift, and enter state 31
	'bool'         shift, and enter state 32
	'double'       shift, and enter state 33
	'int'          shift, and enter state 34

	Type           goto state 29

State 20


	'name'         shift, and enter state 25
	'ref'          shift, and enter state 26
	'valres'       shift, and enter state 27
	'value'        shift, and enter state 28
	L_ident        shift, and enter state 22

	Ident          goto state 23
	PMet           goto state 24

State 21


	L_ident        shift, and enter state 22


State 22

	Ident -> L_ident .                                  (rule 21)

	'('            reduce using rule 21
	')'            reduce using rule 21
	'*'            reduce using rule 21
	'+'            reduce using rule 21
	','            reduce using rule 21
	'-'            reduce using rule 21
	':'            reduce using rule 21
	':='           reduce using rule 21
	';'            reduce using rule 21
	'<'            reduce using rule 21
	'['            reduce using rule 21
	']'            reduce using rule 21
	'loop'         reduce using rule 21
	'until'        reduce using rule 21
	%eof           reduce using rule 21


State 23

	PMet -> Ident .                                     (rule 79)

	':'            reduce using rule 79
	%eof           reduce using rule 79


State 24

	%start_pPMet -> PMet .                              (rule 20)

	%eof           accept


State 25

	PMet -> 'name' . Ident                              (rule 77)

	L_ident        shift, and enter state 22

	Ident          goto state 116

State 26

	PMet -> 'ref' . Ident                               (rule 78)

	L_ident        shift, and enter state 22

	Ident          goto state 115

State 27

	PMet -> 'valres' . Ident                            (rule 76)

	L_ident        shift, and enter state 22

	Ident          goto state 114

State 28

	PMet -> 'value' . Ident                             (rule 75)

	L_ident        shift, and enter state 22

	Ident          goto state 113

State 29

	%start_pType -> Type .                              (rule 19)

	%eof           accept


State 30

	Type -> '&' . Type                                  (rule 74)

	'&'            shift, and enter state 30
	'array'        shift, and enter state 31
	'bool'         shift, and enter state 32
	'double'       shift, and enter state 33
	'int'          shift, and enter state 34

	Type           goto state 112

State 31

	Type -> 'array' . '[' Type ']'                      (rule 73)

	'['            shift, and enter state 111


State 32

	Type -> 'bool' .                                    (rule 72)

	')'            reduce using rule 72
	';'            reduce using rule 72
	']'            reduce using rule 72
	'do'           reduce using rule 72
	%eof           reduce using rule 72


State 33

	Type -> 'double' .                                  (rule 71)

	')'            reduce using rule 71
	';'            reduce using rule 71
	']'            reduce using rule 71
	'do'           reduce using rule 71
	%eof           reduce using rule 71


State 34

	Type -> 'int' .                                     (rule 70)

	')'            reduce using rule 70
	';'            reduce using rule 70
	']'            reduce using rule 70
	'do'           reduce using rule 70
	%eof           reduce using rule 70


State 35

	Exp4 -> Ident . '(' ListExp ')'                     (rule 56)
	Exp7 -> Ident .                                     (rule 62)

	'('            shift, and enter state 110
	')'            reduce using rule 62
	'*'            reduce using rule 62
	'+'            reduce using rule 62
	','            reduce using rule 62
	'-'            reduce using rule 62
	':='           reduce using rule 62
	';'            reduce using rule 62
	'<'            reduce using rule 62
	'['            reduce using rule 62
	']'            reduce using rule 62
	'loop'         reduce using rule 62
	'until'        reduce using rule 62
	%eof           reduce using rule 62


State 36

	Exp7 -> String .                                    (rule 63)

	')'            reduce using rule 63
	'*'            reduce using rule 63
	'+'            reduce using rule 63
	','            reduce using rule 63
	'-'            reduce using rule 63
	':='           reduce using rule 63
	';'            reduce using rule 63
	'<'            reduce using rule 63
	'['            reduce using rule 63
	']'            reduce using rule 63
	'loop'         reduce using rule 63
	'until'        reduce using rule 63
	%eof           reduce using rule 63


State 37

	Exp7 -> Integer .                                   (rule 64)

	')'            reduce using rule 64
	'*'            reduce using rule 64
	'+'            reduce using rule 64
	','            reduce using rule 64
	'-'            reduce using rule 64
	':='           reduce using rule 64
	';'            reduce using rule 64
	'<'            reduce using rule 64
	'['            reduce using rule 64
	']'            reduce using rule 64
	'loop'         reduce using rule 64
	'until'        reduce using rule 64
	%eof           reduce using rule 64


State 38

	Exp7 -> Double .                                    (rule 65)

	')'            reduce using rule 65
	'*'            reduce using rule 65
	'+'            reduce using rule 65
	','            reduce using rule 65
	'-'            reduce using rule 65
	':='           reduce using rule 65
	';'            reduce using rule 65
	'<'            reduce using rule 65
	'['            reduce using rule 65
	']'            reduce using rule 65
	'loop'         reduce using rule 65
	'until'        reduce using rule 65
	%eof           reduce using rule 65


State 39

	ListExp -> Exp .                                    (rule 68)
	ListExp -> Exp . ',' ListExp                        (rule 69)

	')'            reduce using rule 68
	','            shift, and enter state 109
	%eof           reduce using rule 68


State 40

	Exp -> Exp1 .                                       (rule 48)

	')'            reduce using rule 48
	','            reduce using rule 48
	';'            reduce using rule 48
	']'            reduce using rule 48
	'loop'         reduce using rule 48
	'until'        reduce using rule 48
	%eof           reduce using rule 48


State 41

	Exp1 -> Exp2 . '<' Exp2                             (rule 49)
	Exp1 -> Exp2 .                                      (rule 50)
	Exp2 -> Exp2 . '+' Exp3                             (rule 51)
	Exp2 -> Exp2 . '-' Exp3                             (rule 52)

	')'            reduce using rule 50
	'+'            shift, and enter state 101
	','            reduce using rule 50
	'-'            shift, and enter state 102
	';'            reduce using rule 50
	'<'            shift, and enter state 108
	']'            reduce using rule 50
	'loop'         reduce using rule 50
	'until'        reduce using rule 50
	%eof           reduce using rule 50


State 42

	Exp2 -> Exp3 .                                      (rule 53)
	Exp3 -> Exp3 . '*' Exp4                             (rule 54)

	')'            reduce using rule 53
	'*'            shift, and enter state 103
	'+'            reduce using rule 53
	','            reduce using rule 53
	'-'            reduce using rule 53
	';'            reduce using rule 53
	'<'            reduce using rule 53
	']'            reduce using rule 53
	'loop'         reduce using rule 53
	'until'        reduce using rule 53
	%eof           reduce using rule 53


State 43

	Exp3 -> Exp4 .                                      (rule 55)

	')'            reduce using rule 55
	'*'            reduce using rule 55
	'+'            reduce using rule 55
	','            reduce using rule 55
	'-'            reduce using rule 55
	';'            reduce using rule 55
	'<'            reduce using rule 55
	']'            reduce using rule 55
	'loop'         reduce using rule 55
	'until'        reduce using rule 55
	%eof           reduce using rule 55


State 44

	Exp -> Exp5 . ':=' Exp                              (rule 47)
	Exp4 -> Exp5 .                                      (rule 57)

	')'            reduce using rule 57
	'*'            reduce using rule 57
	'+'            reduce using rule 57
	','            reduce using rule 57
	'-'            reduce using rule 57
	':='           shift, and enter state 107
	';'            reduce using rule 57
	'<'            reduce using rule 57
	']'            reduce using rule 57
	'loop'         reduce using rule 57
	'until'        reduce using rule 57
	%eof           reduce using rule 57


State 45

	Exp5 -> Exp6 .                                      (rule 59)
	Exp6 -> Exp6 . '[' Exp ']'                          (rule 60)

	')'            reduce using rule 59
	'*'            reduce using rule 59
	'+'            reduce using rule 59
	','            reduce using rule 59
	'-'            reduce using rule 59
	':='           reduce using rule 59
	';'            reduce using rule 59
	'<'            reduce using rule 59
	'['            shift, and enter state 104
	']'            reduce using rule 59
	'loop'         reduce using rule 59
	'until'        reduce using rule 59
	%eof           reduce using rule 59


State 46

	Exp6 -> Exp7 .                                      (rule 61)

	')'            reduce using rule 61
	'*'            reduce using rule 61
	'+'            reduce using rule 61
	','            reduce using rule 61
	'-'            reduce using rule 61
	':='           reduce using rule 61
	';'            reduce using rule 61
	'<'            reduce using rule 61
	'['            reduce using rule 61
	']'            reduce using rule 61
	'loop'         reduce using rule 61
	'until'        reduce using rule 61
	%eof           reduce using rule 61


State 47

	%start_pListExp -> ListExp .                        (rule 18)

	%eof           accept


State 48

	Exp7 -> '(' . Exp ')'                               (rule 66)

	'('            shift, and enter state 48
	'?'            shift, and enter state 49
	L_ident        shift, and enter state 22
	L_quoted       shift, and enter state 50
	L_integ        shift, and enter state 51
	L_doubl        shift, and enter state 52

	Ident          goto state 35
	String         goto state 36
	Integer        goto state 37
	Double         goto state 38
	Exp            goto state 106
	Exp1           goto state 40
	Exp2           goto state 41
	Exp3           goto state 42
	Exp4           goto state 43
	Exp5           goto state 44
	Exp6           goto state 45
	Exp7           goto state 46

State 49

	Exp5 -> '?' . Exp4                                  (rule 58)

	'('            shift, and enter state 48
	'?'            shift, and enter state 49
	L_ident        shift, and enter state 22
	L_quoted       shift, and enter state 50
	L_integ        shift, and enter state 51
	L_doubl        shift, and enter state 52

	Ident          goto state 35
	String         goto state 36
	Integer        goto state 37
	Double         goto state 38
	Exp4           goto state 105
	Exp5           goto state 58
	Exp6           goto state 45
	Exp7           goto state 46

State 50

	String -> L_quoted .                                (rule 22)

	')'            reduce using rule 22
	'*'            reduce using rule 22
	'+'            reduce using rule 22
	','            reduce using rule 22
	'-'            reduce using rule 22
	':='           reduce using rule 22
	';'            reduce using rule 22
	'<'            reduce using rule 22
	'['            reduce using rule 22
	']'            reduce using rule 22
	'loop'         reduce using rule 22
	'until'        reduce using rule 22
	%eof           reduce using rule 22


State 51

	Integer -> L_integ .                                (rule 23)

	')'            reduce using rule 23
	'*'            reduce using rule 23
	'+'            reduce using rule 23
	','            reduce using rule 23
	'-'            reduce using rule 23
	':='           reduce using rule 23
	';'            reduce using rule 23
	'<'            reduce using rule 23
	'['            reduce using rule 23
	']'            reduce using rule 23
	'loop'         reduce using rule 23
	'until'        reduce using rule 23
	%eof           reduce using rule 23


State 52

	Double -> L_doubl .                                 (rule 24)

	')'            reduce using rule 24
	'*'            reduce using rule 24
	'+'            reduce using rule 24
	','            reduce using rule 24
	'-'            reduce using rule 24
	':='           reduce using rule 24
	';'            reduce using rule 24
	'<'            reduce using rule 24
	'['            reduce using rule 24
	']'            reduce using rule 24
	'loop'         reduce using rule 24
	'until'        reduce using rule 24
	%eof           reduce using rule 24


State 53

	Exp7 -> Ident .                                     (rule 62)

	'['            reduce using rule 62
	%eof           reduce using rule 62


State 54

	%start_pExp7 -> Exp7 .                              (rule 17)

	%eof           accept


State 55

	%start_pExp6 -> Exp6 .                              (rule 16)
	Exp6 -> Exp6 . '[' Exp ']'                          (rule 60)

	'['            shift, and enter state 104
	%eof           accept


State 56

	%start_pExp5 -> Exp5 .                              (rule 15)

	%eof           accept


State 57

	%start_pExp4 -> Exp4 .                              (rule 14)

	%eof           accept


State 58

	Exp4 -> Exp5 .                                      (rule 57)

	')'            reduce using rule 57
	'*'            reduce using rule 57
	'+'            reduce using rule 57
	','            reduce using rule 57
	'-'            reduce using rule 57
	':='           reduce using rule 57
	';'            reduce using rule 57
	'<'            reduce using rule 57
	']'            reduce using rule 57
	'loop'         reduce using rule 57
	'until'        reduce using rule 57
	%eof           reduce using rule 57


State 59

	%start_pExp3 -> Exp3 .                              (rule 13)
	Exp3 -> Exp3 . '*' Exp4                             (rule 54)

	'*'            shift, and enter state 103
	%eof           accept


State 60

	%start_pExp2 -> Exp2 .                              (rule 12)
	Exp2 -> Exp2 . '+' Exp3                             (rule 51)
	Exp2 -> Exp2 . '-' Exp3                             (rule 52)

	'+'            shift, and enter state 101
	'-'            shift, and enter state 102
	%eof           accept


State 61

	%start_pExp1 -> Exp1 .                              (rule 11)

	%eof           accept


State 62

	%start_pExp -> Exp .                                (rule 10)

	%eof           accept


State 63

	Function -> Ident . '(' ListPDecl ')' ':' Type 'do' ListStm 'end'    (rule 26)
	Decl -> Ident . ':' Type                            (rule 27)
	Exp4 -> Ident . '(' ListExp ')'                     (rule 56)
	Exp7 -> Ident .                                     (rule 62)

	'('            shift, and enter state 100
	'*'            reduce using rule 62
	'+'            reduce using rule 62
	'-'            reduce using rule 62
	':'            shift, and enter state 91
	':='           reduce using rule 62
	';'            reduce using rule 62
	'<'            reduce using rule 62
	'['            reduce using rule 62


State 64

	Stm -> Function .                                   (rule 46)

	'('            reduce using rule 46
	'?'            reduce using rule 46
	'do'           reduce using rule 46
	'end'          reduce using rule 46
	'from'         reduce using rule 46
	'return'       reduce using rule 46
	L_ident        reduce using rule 46
	L_quoted       reduce using rule 46
	L_integ        reduce using rule 46
	L_doubl        reduce using rule 46
	%eof           reduce using rule 46


State 65

	Stm -> Decl . ';'                                   (rule 41)

	';'            shift, and enter state 99


State 66

	%start_pStm -> Stm .                                (rule 9)

	%eof           accept


State 67

	Stm -> Exp . ';'                                    (rule 42)

	';'            shift, and enter state 98


State 68

	Stm -> 'do' . ListStm 'end'                         (rule 43)

	'('            reduce using rule 31
	'?'            reduce using rule 31
	'do'           reduce using rule 31
	'end'          reduce using rule 31
	'from'         reduce using rule 31
	'return'       reduce using rule 31
	L_ident        reduce using rule 31
	L_quoted       reduce using rule 31
	L_integ        reduce using rule 31
	L_doubl        reduce using rule 31

	ListStm        goto state 97

State 69

	Stm -> 'from' . Exp 'until' Exp 'loop' Stm 'end'    (rule 44)

	'('            shift, and enter state 48
	'?'            shift, and enter state 49
	L_ident        shift, and enter state 22
	L_quoted       shift, and enter state 50
	L_integ        shift, and enter state 51
	L_doubl        shift, and enter state 52

	Ident          goto state 35
	String         goto state 36
	Integer        goto state 37
	Double         goto state 38
	Exp            goto state 96
	Exp1           goto state 40
	Exp2           goto state 41
	Exp3           goto state 42
	Exp4           goto state 43
	Exp5           goto state 44
	Exp6           goto state 45
	Exp7           goto state 46

State 70

	Stm -> 'return' . Exp ';'                           (rule 45)

	'('            shift, and enter state 48
	'?'            shift, and enter state 49
	L_ident        shift, and enter state 22
	L_quoted       shift, and enter state 50
	L_integ        shift, and enter state 51
	L_doubl        shift, and enter state 52

	Ident          goto state 35
	String         goto state 36
	Integer        goto state 37
	Double         goto state 38
	Exp            goto state 95
	Exp1           goto state 40
	Exp2           goto state 41
	Exp3           goto state 42
	Exp4           goto state 43
	Exp5           goto state 44
	Exp6           goto state 45
	Exp7           goto state 46

State 71

	ListIdent -> Ident .                                (rule 39)
	ListIdent -> Ident . ',' ListIdent                  (rule 40)

	','            shift, and enter state 94
	%eof           reduce using rule 39


State 72

	%start_pListIdent -> ListIdent .                    (rule 8)

	%eof           accept


State 73

	ListPDecl -> PDecl .                                (rule 37)
	ListPDecl -> PDecl . ';' ListPDecl                  (rule 38)

	')'            reduce using rule 37
	';'            shift, and enter state 93
	%eof           reduce using rule 37


State 74

	%start_pListPDecl -> ListPDecl .                    (rule 7)

	%eof           accept


State 75

	PDecl -> PMet . ':' Type                            (rule 28)

	':'            shift, and enter state 92


State 76

	Decl -> Ident . ':' Type                            (rule 27)

	':'            shift, and enter state 91


State 77

	ListDecl -> Decl .                                  (rule 34)
	ListDecl -> Decl . ';' ListDecl                     (rule 35)

	';'            shift, and enter state 90
	%eof           reduce using rule 34


State 78

	%start_pListDecl -> ListDecl .                      (rule 6)

	%eof           accept


State 79

	%start_pListStm -> ListStm .                        (rule 5)
	ListStm -> ListStm . Stm                            (rule 32)

	'('            shift, and enter state 48
	'?'            shift, and enter state 49
	'do'           shift, and enter state 68
	'from'         shift, and enter state 69
	'return'       shift, and enter state 70
	L_ident        shift, and enter state 22
	L_quoted       shift, and enter state 50
	L_integ        shift, and enter state 51
	L_doubl        shift, and enter state 52
	%eof           accept

	Ident          goto state 63
	String         goto state 36
	Integer        goto state 37
	Double         goto state 38
	Function       goto state 64
	Decl           goto state 65
	Stm            goto state 87
	Exp            goto state 67
	Exp1           goto state 40
	Exp2           goto state 41
	Exp3           goto state 42
	Exp4           goto state 43
	Exp5           goto state 44
	Exp6           goto state 45
	Exp7           goto state 46

State 80

	%start_pListFunction -> ListFunction .              (rule 4)
	ListFunction -> ListFunction . Function             (rule 30)

	L_ident        shift, and enter state 22
	%eof           accept

	Ident          goto state 83
	Function       goto state 89

State 81

	%start_pPDecl -> PDecl .                            (rule 3)

	%eof           accept


State 82

	%start_pDecl -> Decl .                              (rule 2)

	%eof           accept


State 83

	Function -> Ident . '(' ListPDecl ')' ':' Type 'do' ListStm 'end'    (rule 26)

	'('            shift, and enter state 88


State 84

	%start_pFunction -> Function .                      (rule 1)

	%eof           accept


State 85

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 86

	Program -> ListStm .                                (rule 25)
	ListStm -> ListStm . Stm                            (rule 32)

	'('            shift, and enter state 48
	'?'            shift, and enter state 49
	'do'           shift, and enter state 68
	'from'         shift, and enter state 69
	'return'       shift, and enter state 70
	L_ident        shift, and enter state 22
	L_quoted       shift, and enter state 50
	L_integ        shift, and enter state 51
	L_doubl        shift, and enter state 52
	%eof           reduce using rule 25

	Ident          goto state 63
	String         goto state 36
	Integer        goto state 37
	Double         goto state 38
	Function       goto state 64
	Decl           goto state 65
	Stm            goto state 87
	Exp            goto state 67
	Exp1           goto state 40
	Exp2           goto state 41
	Exp3           goto state 42
	Exp4           goto state 43
	Exp5           goto state 44
	Exp6           goto state 45
	Exp7           goto state 46

State 87

	ListStm -> ListStm Stm .                            (rule 32)

	'('            reduce using rule 32
	'?'            reduce using rule 32
	'do'           reduce using rule 32
	'end'          reduce using rule 32
	'from'         reduce using rule 32
	'return'       reduce using rule 32
	L_ident        reduce using rule 32
	L_quoted       reduce using rule 32
	L_integ        reduce using rule 32
	L_doubl        reduce using rule 32
	%eof           reduce using rule 32


State 88

	Function -> Ident '(' . ListPDecl ')' ':' Type 'do' ListStm 'end'    (rule 26)

	')'            reduce using rule 36
	'name'         shift, and enter state 25
	'ref'          shift, and enter state 26
	'valres'       shift, and enter state 27
	'value'        shift, and enter state 28
	L_ident        shift, and enter state 22

	Ident          goto state 23
	PDecl          goto state 73
	ListPDecl      goto state 128
	PMet           goto state 75

State 89
